# CyberSec

./: LICENSE
Cryptography/PW4/: CMakeLists.txt  magma_cipher.cpp  magma_cipher.h  main.cpp  test_magma.cpp
Cryptography/PW7/: example.dec  example.enc  rsa  rsa_attack_demo.cpp  rsa_main.cpp
Cryptography/PW8/: anna_queen.txt  ecghost.cpp  gost_sign  verify_result.txt
Virustotal_Vulnerability/: README.md  applications.json  report.json  scan_report.json  virustotal.py  vuln_results.txt  vulnerability_summary.json  vulners.py
